# learn-ocaml

./: .gitignore  MODULE_A_COMPLETE.md  README.md  module_a_report.txt
.cursor/rules/: 00-initial.mdc
task01_hello_world/: .solution_reference.ml  README.md  dune-project  task01_hello_world.opam
task01_hello_world/_build/: .db  .digest-db  log
task01_hello_world/_build/default/: task01_hello_world.dune-package  task01_hello_world.install
task01_hello_world/_build/default/.dune/: configurator  configurator.v2
task01_hello_world/_build/default/lib/: task01_hello_world.cma  task01_hello_world.cmxa  task01_hello_world.cmxs
task01_hello_world/_build/default/lib/.merlin-conf/: lib-task01_hello_world
task01_hello_world/_build/default/lib/.task01_hello_world.objs/byte/: task01_hello_world.cmi  task01_hello_world.cmo  task01_hello_world.cmt
task01_hello_world/_build/default/lib/.task01_hello_world.objs/native/: task01_hello_world.cmx
task01_hello_world/_build/default/test/.merlin-conf/: exe-test_task01_hello_world
task01_hello_world/_build/default/test/.test_task01_hello_world.eobjs/byte/: dune__exe__Test_task01_hello_world.cmi  dune__exe__Test_task01_hello_world.cmti
task01_hello_world/_build/default/test/.test_task01_hello_world.eobjs/native/: dune__exe__Test_task01_hello_world.cmx
task01_hello_world/_build/default/test/_build/: .digest-db  log
task01_hello_world/_build/default/test/_build/_tests/: Task01_HelloWorld
task01_hello_world/_build/default/test/_build/_tests/DO3VJV8A/: basic_output.000.output  basic_output.001.output  basic_output.002.output
task01_hello_world/_build/install/default/lib/task01_hello_world/: META  dune-package  opam
task01_hello_world/lib/: dune
task01_hello_world/test/: dune  test_task01_hello_world.ml
task02_recursion/: .solution_reference.ml  README.md  dune-project  task02_recursion.opam
task02_recursion/lib/: dune  recursion.ml  recursion.mli
task02_recursion/test/: dune  test_task02_recursion.ml
task03_lists/: .solution_reference.ml  README.md  dune-project  task03_lists.opam
task03_lists/lib/: dune  list_ops.ml  list_ops.mli
task03_lists/test/: dune  test_task03_lists.ml
task04_adt/: .solution_reference.ml  README.md  dune-project  task04_adt.opam
task04_adt/lib/: bst.ml  bst.mli  dune
task04_adt/test/: dune  test_task04_adt.ml
task05_error_handling/: .solution_reference.ml  README.md  dune-project  task05_error_handling.opam
task05_error_handling/lib/: dune  error_handling.ml  error_handling.mli
task05_error_handling/test/: dune  test_task05_error_handling.ml
task06_modules/: .solution_reference.ml  README.md  dune-project  task06_modules.opam
task06_modules/lib/: dune  part1_stack.ml  part1_stack.mli  part2_counter.ml  part2_counter.mli  part2_counter_limited.mli  part3_queue.ml  part4_set.ml  rational.ml  rational.mli
task06_modules/test/: dune  test_task06_modules.ml
task07_ast/: .solution_reference.ml  README.md  dune-project  task07_ast.opam
task07_ast/lib/: dune  expr.ml  expr.mli
task07_ast/test/: dune  test_task07_ast.ml
task08_parser/: .solution_reference.ml  README.md  dune-project  task08_parser.opam
task08_parser/lib/: dune  parser.ml  parser.mli
task08_parser/test/: dune  test_task08_parser.ml
task09_variables/: .solution_reference.ml  README.md  dune-project  task09_variables.opam
task09_variables/lib/: dune  env_eval.ml  env_eval.mli
task09_variables/test/: dune  test_task09_variables.ml
