(lang dune 3.20)

(name task03_lists)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name task03_lists)
 (synopsis "Task 3: Pattern Matching and Lists")
 (description "Learn pattern matching and implement map, filter, fold_left")
 (depends 
  ocaml
  (alcotest :with-test))
 (tags
  ("ocaml" "learning" "tutorial" "lists" "pattern-matching" "higher-order")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
