(lang dune 3.20)

(name task04_adt)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name task04_adt)
 (synopsis "Task 4: Algebraic Data Types and Interfaces")
 (description "Learn ADTs, variant types, and module interfaces with Binary Search Tree")
 (depends 
  ocaml
  (alcotest :with-test))
 (tags
  ("ocaml" "learning" "tutorial" "adt" "types" "bst")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
