(lang dune 3.20)

(name task06_modules)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name task06_modules)
 (synopsis "Task 6: Modules and Functors - Progressive Practice")
 (description "Learn OCaml's module system through 4 progressive mini-modules: basic modules, signatures, and functors")
 (depends 
  ocaml
  (alcotest :with-test))
 (tags
  ("ocaml" "learning" "tutorial" "modules" "functors" "signatures")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
