(lang dune 3.20)

(name task07_ast)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name task07_ast)
 (synopsis "Task 7: Arithmetic AST + Pretty-Print")
 (description "Learn AST representation, tree traversal, and the Format module")
 (depends 
  ocaml
  (alcotest :with-test))
 (tags
  ("ocaml" "learning" "tutorial" "ast" "compiler" "pretty-print")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
