(lang dune 3.20)

(name task08_parser)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name task08_parser)
 (synopsis "Task 8: Parser (Recursive Descent)")
 (description "Learn recursive descent parsing with operator precedence")
 (depends 
  ocaml
  (alcotest :with-test))
 (tags
  ("ocaml" "learning" "tutorial" "parser" "compiler" "recursive-descent")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
