(lang dune 3.20)

(name task09_variables)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name task09_variables)
 (synopsis "Task 9: Variables and let...in + Environments")
 (description "Learn variable bindings, scoping, and the environment model")
 (depends 
  ocaml
  (alcotest :with-test))
 (tags
  ("ocaml" "learning" "tutorial" "variables" "environment" "scoping")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
